--- a/style.css
+++ b/style.css
@@ -26,7 +26,19 @@ input {
 	align-items: center;
 	justify-content: center;
 	gap: 40px;
+
 }
+
+.main__container__content-form{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 40px;
+	max-width: 600px;
+	width: 100%;
+}
+
 .main__container__content-input {
 	display: flex;
 	flex-direction: column;
@@ -49,4 +61,18 @@ input {
 .errorBorder{
    border:1px solid red;
   
+}
+
+.submit{
+	margin-top: 100px;
+	border-radius:10px;
+	padding: 10px;
+	background-color:transparent;
+	border:1px solid #cdcdcd;
+}
+
+.submit:hover{
+	cursor: pointer;
+	background-color:#cdcdcd;
+	transition: all 700ms;
 }
