--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ input {
 }
 .main__container_title{
 	margin:0;
-	padding-top: 50px;
+	padding-top: 5px;
 	font-family: 'Fasthand', cursive;
 	font-size: 40px;
 }
@@ -67,7 +67,7 @@ input {
 }
 
 .submit {
-	margin-top: 100px;
+	margin-bottom: 15px;
 	border-radius: 10px;
 	padding: 10px;
 	border: none;
